samples/_failures_safe/1761264330_81d673_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85c280ee.c: In function ‘main’:
./samples/SAFE/__tmp_85c280ee.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
